--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
     "method-override": "^3.0.0",
-    "mongoose": "^7.2.2",
+    "mongoose": "^6.0.0",
+    "mongoose-delete": "^0.5.4",
     "mongoose-slug-generator": "^1.0.4",
     "mongoose-slug-updater": "^3.3.0"
   },
